<resources>
    <string name="app_name">Bagsa</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!-- Register Activity-->
    <string name="title_activity_register">Registero de usuario</string>
    <string name="full_name">Nombre Completo</string>
    <string name="cellphone_num">Celular</string>
    <string name="town">Localidad</string>
    <string name="user_type">Tipo de Usuario</string>
    <string name="producer">1-Productor</string>
    <string name="industrial">2-Industrial</string>
    <string name="other">4-Otros</string>
    <string name="exportador">3-Exportador</string>
    <string name="transactionsBolsa">Ha realizado transacciones en Bolsa?</string>
    <string name="transBag">Realiza sus transacciones en Bagsa?</string>
    <string name="notes">Nota: La información es para uso exclusivo de BAGSA,
        para dar asistencia en el uso de la aplicación.</string>
    <string name="alreadyUser">Ya tienes una cuenta! Sign in</string>
    <string name="passConf">Repetir Contraseña</string>

    <!--Login-->
    <string name="txtUser">Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtBtnGuest">Invitado</string>
    <string name="txtBtnLogin">Inicio</string>
    <string name="title_activity_principal">Inicio</string>
    <string name="user_pws_error">Usuario no registrado</string>

    <!-- Principal Activity-->
    <string name="notifications">Notificaciones</string>
    <string name="price_cons">Consulta de Precios</string>
    <string name="newsletters">Boletines</string>
    <string name="reports">Reportes</string>
    <string name="questions">Consultas eBagsa</string>
    <string name="subastas">Subastas</string>
    <string name="title_activity_reports">Boletines</string>

    <!-- Reportes y Boletines Activity-->
    <string name="reportsNNews">Boletines</string>
    <string name="type">Tipo</string>
    <string name="year">Año</string>
    <string name="month">Mes</string>
    <string name="generate">Generar</string>
    <string name="title_activity_qrys_ebagsa">Consultas e-Bagsa</string>
    <string name="filters">Filtros</string>

    <!-- QrysEbagsa Activity-->
    <string name="chose_qry">Elija el tipo de consulta</string>
    <string name="contract">Contratos</string>
    <string name="auctionsAndBids">Status de Subastas y Pujas</string>
    <string name="buyAndSell">Compra/Venta</string>
    <string name="title_activity_qry_prices">Consulta de Precios</string>
    <string name="offers">Ofertas</string>

    <!-- QryPrices Prices-->
    <string name="market">Mercado</string>
    <string name="product">Producto</string>
    <string name="bolsa">Bolsa</string>
    <string name="query">Consultar</string>
    <string name="title_activity_boletinB">Boletin</string>
    <string name="title_activity_boletinR">Reporte</string>
    <string name="title_activity_boletin">Boletin/Reporte</string>
    <!-- Boletin Activity-->
    <string name="uom">Unidad de Medida</string>
    <string name="quality">Calidad</string>
    <string name="volume">Volumen</string>
    <string name="minPrice">Precio mínimo</string>
    <string name="avgPrice">Precio promedio</string>
    <string name="maxPrice">Precio máximo</string>
    <string name="title_activity_prices">Precios</string>

    <!-- Prices activity-->
    <string name="market_price">Precio de Mercado</string>
    <string name="buyPrice">Precio de Cmpa.</string>
    <string name="sellPrice">Precio de Vta.</string>
    <string name="tendency">La Tendencia</string>
    <string name="variation">Variación en base al último cierre</string>
    <string name="title_activity_tabla_reports">TablaReportsActivity</string>

    <!-- Buttons-->
    <string name="export">Exportar</string>
    <string name="email">eMail</string>

    <string name="chose_type">Elejir Tipo</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_custom_tab">customTabActivity</string>
    <string name="txtFilter">Filtrar</string>

    <!-- Custom Tab Activity-->
    <string name="description">Descripcion</string>
    <string name="date">Fecha</string>
    <string name="logoBagsa">logoBagsa</string>
    <string name="logoImgVBagsa">imgViewLogoBagsa</string>

    <string name="noInternet">No hay acceso a internet !!</string>
    <string name="title_activity_notif_desc">NotifDescActivity</string>

    <!-- Notificaciones Activity-->
    <string name="id">ID</string>

    <!-- Filter PopUP-->
    <string name="txtData">Información</string>
    <string name="txtColumn">Columna</string>
    <string name="txtOrderBy">Ordenar</string>
    <string name="txtAZ">A-Z</string>
    <string name="txtZA">Z-A</string>
    <string name="txtOK">Aceptar</string>
    <string name="txtCancell">Cancelar</string>
    <string name="title_activity_contract">ContractActivity</string>

    <!-- Contract Activity-->
    <string name="ContractNo">Nro. de Contrato</string>
    <string name="TrxDate">Fecha de Trx.</string>
    <string name="ContractType">Tipo de Contrato</string>
    <string name="volumeTrans">Vol. Transado</string>
    <string name="ProdTrans">Producto Transado</string>
    <string name="totAmt">Monto Total</string>
    <string name="prima">Prima</string>
    <string name="title_activity_compra_venta">CompraVentaActivity</string>
    <string name="title_activity_consulta_precios">ConsultaPreciosActivity</string>
    <string name="title_activity_ofertas">OfertasActivity</string>

    <!-- Offer Activity-->
    <string name="Instrument">Instrumento</string>
    <string name="Price">Precio</string>
    <string name="TransactStatus">Transado</string>
    <string name="Offer">Oferta</string>
    <string name="title_activity_subastas">SubastasActivity</string>

    <!-- Subastas Activity-->
    <string name="DocNo">DocNo</string>
    <string name="DocStatus">DocStatus</string>
    <string name="BestOffer">Mejor Oferta</string>
    <string name="Time">Hora</string>


</resources>
