<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#E8F5E9"
    tools:context="com.app.bagsa.bagsaapp.qrysEBagsaActivity">

    <!-- Logo-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_bagsa"
        android:id="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chose_qry"
        android:id="@+id/textView4"
        android:layout_marginTop="20dip"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contract"
        android:id="@+id/buttonContract"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auctionsAndBids"
        android:id="@+id/buttonauctionsAndBids"
        android:layout_below="@+id/buttonContract"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buyAndSell"
        android:id="@+id/buttonbuyAndSell"
        android:layout_below="@+id/buttonauctionsAndBids"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
