<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin_custom"
    android:paddingRight="@dimen/activity_horizontal_margin_custom"
    android:paddingTop="@dimen/activity_vertical_margin_custom"
    android:paddingBottom="@dimen/activity_vertical_margin_custom"
    android:background="#E8F5E9"
    android:fillViewport="true">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/filter_button_img"
                    android:id="@+id/ivFilterBoletin"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtFilter"
                    android:id="@+id/textView21"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tableLayout1"
                    android:background="@drawable/celda_cuerpo2">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tableRowHeadersBoletin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/product"
                            android:textColor="#fffff9f3"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/textView8" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/uom"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/textView9" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/quality"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/textView10" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/volume"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/textView11" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/minPrice"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/textView12" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/avgPrice"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/textView13" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/maxPrice"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/textView14" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/button_customize"
                    android:textColor="#FFFFFF"
                    android:id="@+id/button4"
                    android:layout_marginBottom="5dip"
                    android:layout_marginRight="5dip" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/button_customize"
                    android:textColor="#FFFFFF"
                    android:id="@+id/button9"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5dip" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>