<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin_custom"
    android:paddingRight="@dimen/activity_horizontal_margin_custom"
    android:paddingTop="@dimen/activity_vertical_margin_custom"
    android:paddingBottom="@dimen/activity_vertical_margin_custom"
    android:background="#E8F5E9"
    android:fillViewport="true">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayoutPrices"
            android:background="@drawable/celda_cuerpo2">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/product"
                    android:textColor="#fffff9f3"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:id="@+id/textView8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fffff9f3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/bolsa"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:id="@+id/textView9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fffff9f3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/market_price"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:id="@+id/textView10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fffff9f3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tendency"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:id="@+id/textView11" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fffff9f3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/variation"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:id="@+id/textView12" />

            </TableRow>
        </TableLayout>
    </HorizontalScrollView>
</ScrollView>