<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin_custom"
    android:paddingRight="@dimen/activity_horizontal_margin_custom"
    android:paddingTop="@dimen/activity_vertical_margin_custom"
    android:paddingBottom="@dimen/activity_vertical_margin_custom"
    android:background="#E8F5E9"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtFilter"
                    android:id="@+id/textView21"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/filter_button_img"
                    android:id="@+id/ivFilterSubasta"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="right" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tableLayoutSubasta"
                    android:background="@drawable/celda_cuerpo2">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tableRowHeadersSubasta">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/DocNo"
                            android:textColor="#fffff9f3"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/tvDocNo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/product"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/tvProduct" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/volume"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/tvVol" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/Price"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/tvPrice" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/type"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/tvTipo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/DocStatus"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/tvDocStatus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/BestOffer"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/tvBestOffer" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fffff9f3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/Time"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip"
                            android:id="@+id/tvTime" />

                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
